--- a/public/css/style.css
+++ b/public/css/style.css
@@ -319,6 +319,7 @@ h3 {
 	top: 0;
 	left: 0;
 	right: 0;
+	/* TODO change this so the header top left aligns */
 }
 #site_logo {
 	font-size: 22px;
@@ -1153,7 +1154,10 @@ body.snowflakes {
 	background-image: url(../images/bg/single_img_bg_2.jpg);
 }
 #single_img_bg.image6 {
-	background-image: url(../images/bg/single_img_bg_5.jpg);
+	/*background-image: url(../images/bg/single_img_bg_5.jpg);*/
+	background-image: url(../images/bg/office.jpg);
+	-webkit-filter: blur(2px);
+
 }
 body.raindrops {
 	background: url(../images/raindrops.jpg) 0 0 no-repeat;
