--- a/public/css/style.css
+++ b/public/css/style.css
@@ -36,8 +36,8 @@ body {
 	padding: 0;
 	position: relative;
 	margin: 0;
-	font-weight: 600;
-	font-family: 'Montserrat', sans-serif;
+	/*font-weight: 600;*/
+	font-family: 'Open Sans', 'Montserrat', sans-serif;
 	background: #000;
 	color: #fff;
 	font-size: 18px;
@@ -57,8 +57,8 @@ h3 {
 	color: #fff;
 	margin: 0 0 10px;
 	text-transform: uppercase;
-	font-weight: 900;
-}
+/*	font-weight: 900;
+*/}
 ::selection {
   background: #000; /* WebKit/Blink Browsers */
 }
@@ -799,7 +799,7 @@ button::-moz-focus-inner {
 	position: relative;
 }
 #countdown_block .knob_progress .progress_count input {
-	font-family: 'Montserrat', sans-serif !important;
+	font-family: 'Open Sans', 'Montserrat', sans-serif !important;
 	font-weight: 900 !important;
 	height: 62px !important;
 	font-size: 52px !important;
