--- a/public/css/style.css
+++ b/public/css/style.css
@@ -859,7 +859,6 @@ button::-moz-focus-inner {
 	left: 50px;
 	right: 50px;
 	margin: 0 auto;
-	text-align: center;
 	z-index: 12;
 	width: 100%;
 	max-width: 1100px;
@@ -1111,51 +1110,11 @@ button::-moz-focus-inner {
 	Background
 */
 
-#single_img_bg {
-	height: 100%;
-	position: fixed;
-	top: 0;
-	bottom: 0;
-	left: 0;
-	right: 0;
-	z-index: 1;
-
-	background: url(../images/single_img_bg.jpg) center 0 no-repeat; /* Here you can override background image */
+body {
+	background: url(../images/clean-and-calm.jpg) center 0 no-repeat; /* Here you can override background image */
 	background-attachment: fixed;
 	background-size: cover;
 }
-.style_2 #single_img_bg {
-	background-image: url(../images/bg/single_img_bg_1.jpg);
-}
-.style_3 #single_img_bg {
-	background-image: url(../images/bg/gal1_slide1.jpg);
-}
-.style_4 #single_img_bg {
-	background-image: url(../images/bg/single_img_bg_4.jpg);
-}
-.style_5 #single_img_bg {
-	background-image: url(../images/bg/single_img_bg_2.jpg);
-}
-#single_img_bg.image6 {
-	background-image: url(../images/clean-and-calm.jpg);
-
-}
-body.raindrops {
-	background: url(../images/raindrops.jpg) 0 0 no-repeat;
-	background-size: cover;
-}
-
-/* Single color background */
-
-#single_color_bg {
-	position: fixed;
-	z-index: 1;
-	top: 0;
-	width: 100%;
-	height: 100%;
-	background: #942936; /* You can override background color here */
-}
-
 /* Slideshow 1 */
 
 #bg_slideshow {
