--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1111,9 +1111,27 @@ button::-moz-focus-inner {
 */
 
 body {
-	background: url(../images/clean-and-calm.jpg) center 0 no-repeat; /* Here you can override background image */
-	background-attachment: fixed;
-	background-size: cover;
+}
+
+
+
+#bg {
+  position: fixed; 
+  top: -50%; 
+  left: -50%; 
+  width: 200%; 
+  height: 200%;
+  z-index: -1;
+}
+#bg img {
+  position: absolute; 
+  top: 0; 
+  left: 0; 
+  right: 0; 
+  bottom: 0; 
+  margin: auto; 
+  min-width: 50%;
+  min-height: 50%;
 }
 
 @media all and (max-width: 600px) {
