--- a/public/css/landing-page.css
+++ b/public/css/landing-page.css
@@ -183,3 +183,9 @@ a.inquery {
   font-size: 2em;
   line-height: 1.6;
 }
+
+.grayout {
+  filter: url('data:image/svg+xml;charset=utf-8,<svg xmlns="http://www.w3.org/2000/svg"><filter id="filter"><feColorMatrix type="matrix" color-interpolation-filters="sRGB" values="0.2126 0.7152 0.0722 0 0 0.2126 0.7152 0.0722 0 0 0.2126 0.7152 0.0722 0 0 0 0 0 1 0" /></filter></svg>#filter');
+  -webkit-filter: grayscale(20%);
+          filter: grayscale(20%);
+}
